<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:padding="10dp">



    <ImageView
        android:id="@+id/install_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/version_updater"/>

    <com.NaTicket.n.custom.MyTextViewBold
        android:id="@+id/new_version_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="v1.6"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="0dp"
        customfontdemo:fontName="@string/custom_font" />

    <com.NaTicket.n.custom.MyTextViewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/there_is_new_version"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        customfontdemo:fontName="@string/custom_font" />

    <com.NaTicket.n.custom.MyTextViewBold
        android:id="@+id/update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Update_now"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:textAllCaps="true"
        customfontdemo:fontName="@string/custom_font"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
       android:background="@drawable/transparent_border" />




</LinearLayout>